Bug 360858 - Escape should cancel active edit in Bookmark Manager. Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=hendy, sr=pink